fixed nanny bug

--- a/src/transform_testing.ipynb
+++ b/src/transform_testing.ipynb
@@ -81,9 +81,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:12<00:00,  7.26it/s]\n",
-      "100%|██████████| 100/100 [00:00<00:00, 730.69it/s]\n",
-      "100%|██████████| 100/100 [00:00<00:00, 16737.05it/s]"
+      "100%|██████████| 100/100 [00:13<00:00,  6.86it/s]\n",
+      "100%|██████████| 100/100 [00:00<00:00, 651.53it/s]\n",
+      "100%|██████████| 100/100 [00:00<00:00, 26098.59it/s]"
      ]
     },
     {
@@ -104,27 +104,37 @@
     }
    ],
    "source": [
-    "smp = tf.apply_all_transforms(smp,dict(input_shape=(128,128,3)))"
+    "train, test, valid = asm.get_dataset(smp, input_shape=(128,128,3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "200"
+       "array([-0.48251708, -0.48489464, -0.48761351, -0.48330421, -0.4856098 ,\n",
+       "       -0.48761351, -0.48017207, -0.47809068, -0.47606396, -0.48648508,\n",
+       "       -0.47682063, -0.47871461, -0.47436048, -0.48761351, -0.47341453,\n",
+       "       -0.48489464, -0.4776544 , -0.4856098 , -0.47468561, -0.47871461,\n",
+       "       -0.4856098 , -0.47726182, -0.49192281, -0.47945691, -0.48920394,\n",
+       "       -0.47673805, -0.48251708, -0.48489464, -0.48761351, -0.48330421,\n",
+       "       -0.4856098 , -0.48761351, -0.48017207, -0.47809068, -0.47606396,\n",
+       "       -0.48648508, -0.47682063, -0.47871461, -0.47436048, -0.48761351,\n",
+       "       -0.47341453, -0.48489464, -0.4776544 , -0.4856098 , -0.47468561,\n",
+       "       -0.47871461, -0.4856098 , -0.47726182, -0.49192281, -0.47945691,\n",
+       "       -0.48920394, -0.47673805])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(smp)"
+    "valid['y']"
    ]
   },
   {
