--- a/src/transform_testing.ipynb
+++ b/src/transform_testing.ipynb
@@ -66,8 +66,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  0%|          | 0/100 [00:00<?, ?it/s]"
+      "  2%|▏         | 2/100 [00:00<00:08, 12.18it/s]"
      ]
     },
     {
@@ -81,9 +80,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:13<00:00,  6.86it/s]\n",
-      "100%|██████████| 100/100 [00:00<00:00, 651.53it/s]\n",
-      "100%|██████████| 100/100 [00:00<00:00, 26098.59it/s]"
+      "100%|██████████| 100/100 [00:12<00:00,  7.83it/s]\n",
+      "100%|██████████| 100/100 [00:00<00:00, 775.82it/s]\n",
+      "100%|██████████| 100/100 [00:00<00:00, 1694.28it/s]\n",
+      "  0%|          | 0/100 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -91,6 +91,7 @@
      "output_type": "stream",
      "text": [
       "row mapping relit_img\n",
+      "row mapping normed_img\n",
       "Y normalization\n",
       "flip augmentation\n"
      ]
@@ -99,7 +100,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "100%|██████████| 100/100 [00:00<00:00, 3078.59it/s]\n"
      ]
     }
    ],
@@ -109,32 +110,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.48251708, -0.48489464, -0.48761351, -0.48330421, -0.4856098 ,\n",
-       "       -0.48761351, -0.48017207, -0.47809068, -0.47606396, -0.48648508,\n",
-       "       -0.47682063, -0.47871461, -0.47436048, -0.48761351, -0.47341453,\n",
-       "       -0.48489464, -0.4776544 , -0.4856098 , -0.47468561, -0.47871461,\n",
-       "       -0.4856098 , -0.47726182, -0.49192281, -0.47945691, -0.48920394,\n",
-       "       -0.47673805, -0.48251708, -0.48489464, -0.48761351, -0.48330421,\n",
-       "       -0.4856098 , -0.48761351, -0.48017207, -0.47809068, -0.47606396,\n",
-       "       -0.48648508, -0.47682063, -0.47871461, -0.47436048, -0.48761351,\n",
-       "       -0.47341453, -0.48489464, -0.4776544 , -0.4856098 , -0.47468561,\n",
-       "       -0.47871461, -0.4856098 , -0.47726182, -0.49192281, -0.47945691,\n",
-       "       -0.48920394, -0.47673805])"
+       "array([[[[-0.78039216, -0.79607843, -0.80392157],\n",
+       "         [-0.79607843, -0.81176471, -0.81960784],\n",
+       "         [-0.77254902, -0.80392157, -0.81176471],\n",
+       "         ...,\n",
+       "         [-0.78823529, -0.76470588, -0.78039216],\n",
+       "         [-0.81176471, -0.79607843, -0.81176471],\n",
+       "         [-0.7254902 , -0.78823529, -0.78823529]],\n",
+       "\n",
+       "        [[-0.78823529, -0.82745098, -0.83529412],\n",
+       "         [-0.81176471, -0.83529412, -0.84313725],\n",
+       "         [-0.80392157, -0.83529412, -0.84313725],\n",
+       "         ...,\n",
+       "         [-0.79607843, -0.78823529, -0.80392157],\n",
+       "         [-0.74901961, -0.75686275, -0.76470588],\n",
+       "         [-0.73333333, -0.76470588, -0.77254902]],\n",
+       "\n",
+       "        [[-0.77254902, -0.83529412, -0.83529412],\n",
+       "         [-0.78823529, -0.81176471, -0.81960784],\n",
+       "         [-0.78039216, -0.81176471, -0.81960784],\n",
+       "         ...,\n",
+       "         [-0.75686275, -0.78823529, -0.79607843],\n",
+       "         [-0.7254902 , -0.75686275, -0.76470588],\n",
+       "         [-0.77254902, -0.79607843, -0.80392157]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[-0.78039216, -0.77254902, -0.78823529],\n",
+       "         [-0.81176471, -0.78039216, -0.79607843],\n",
+       "         [-0.75686275, -0.78823529, -0.79607843],\n",
+       "         ...,\n",
+       "         [-0.80392157, -0.78039216, -0.79607843],\n",
+       "         [-0.78823529, -0.78039216, -0.79607843],\n",
+       "         [-0.81176471, -0.78039216, -0.78039216]],\n",
+       "\n",
+       "        [[-0.78823529, -0.78039216, -0.79607843],\n",
+       "         [-0.82745098, -0.79607843, -0.81176471],\n",
+       "         [-0.77254902, -0.80392157, -0.81176471],\n",
+       "         ...,\n",
+       "         [-0.80392157, -0.78039216, -0.79607843],\n",
+       "         [-0.78823529, -0.78039216, -0.79607843],\n",
+       "         [-0.80392157, -0.78039216, -0.78039216]],\n",
+       "\n",
+       "        [[-0.78039216, -0.77254902, -0.78823529],\n",
+       "         [-0.81960784, -0.78823529, -0.80392157],\n",
+       "         [-0.77254902, -0.80392157, -0.81176471],\n",
+       "         ...,\n",
+       "         [-0.78823529, -0.76470588, -0.78039216],\n",
+       "         [-0.78823529, -0.77254902, -0.78823529],\n",
+       "         [-0.77254902, -0.77254902, -0.77254902]]]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "valid['y']"
+    "valid['x'][:1]"
    ]
   },
   {
